133 ==> 425096 - Crash Unsupported JPEG process: SOF type 0xc8.
134 ==> 425702 - digiKam crashes under Linux when detecting faces.
135 ==> 425703 - digiKam crashes (again) under Linux while detecting faces.
136 ==> 184469 - Red eyes doesn't work here.
137 ==> 174683 - Crashes when try to correct red eye.
138 ==> 425439 - App crashes during the maintenance process with face recognition. stacktrace and log included.
139 ==> 426331 - The file digikam.exe contains no icons.
140 ==> 426333 - Icons Not Set for digiKam and Showfoto.
141 ==> 426717 - digikam.exe & showfoto.exe: no application-specific icons shown on Windows 10 after upgrade to 7.1.0.
142 ==> 427468 - Duplicate subalbums on Windows 10 (format YYYY\MM).
143 ==> 427385 - digiKam git build fail.
144 ==> 427555 - Allow selecting single picture, which fills complete screen which can be panned and zoomed.
145 ==> 427662 - HiDPI Settings Not Working in Digikam 7.1.0.
146 ==> 396086 - Changing elements order takes near 5 minutes in a folder with 50 images.
147 ==> 424691 - Thumbnails not showing for face tags [patch].
148 ==> 427863 - Dragging a folder onto albums tree view sidebar will import with name of parent folder.
149 ==> 427899 - Search (and Timeline, and ...) should offer a way to go to the album of the currently selected image.
150 ==> 427907 - Person name appears in tool tip and also search and also people listing but is shown as unknown in the photo.
151 ==> 428435 - Duration Column not showing any value.
152 ==> 388899 - Assigning color labels from right side menu is different than over context menu.
153 ==> 428427 - Some metadata (tags, captions) not applying to grouped images.
154 ==> 424437 - Batch deleting duplicates.
155 ==> 428558 - With batch workflow lens correction doesn't use metadata.
156 ==> 428472 - digiKam doesn't come up as it can't update db schema from 9 to 10.
157 ==> 428578 - The filename extension is used for sorting the filename.
158 ==> 