@@ -171,4 +171,5 @@ BUGFIXES:
 155 ==> 428558 - With batch workflow lens correction doesn't use metadata.
 156 ==> 428472 - digiKam doesn't come up as it can't update db schema from 9 to 10.
 157 ==> 428578 - The filename extension is used for sorting the filename.
-158 ==> 
+158 ==> 428733 - Import window always keeps last image.
+159 ==> 
